<package format="2">
    <name>img_imu_record</name>
    <version>0.0.1</version>
    <description>
        Records image and imu message to disk
    </description>
    <url>http://rpng.io/</url>
    <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
    <license>All Rights Reserved RPNG</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>message_filters</depend>
    <depend>cv_bridge</depend>
    <depend>roslib</depend>
    <depend>rosbag</depend>
</package>
